# text_viewer

./: CMakeLists.txt  README.md
include/: about.cpp  mainWindow.h  openFile.cpp  setupEditor.cpp  setupMenu.cpp
src/: main.cpp  mainWindow.cpp
